--- a/html/Startsite.html
+++ b/html/Startsite.html
@@ -7,84 +7,81 @@
     <link rel="stylesheet" href="../styles/style.css">
 
 </head>
-<body>
+<body id="startsite">
 
 <div id="milch-glas-layer">
 
-    <dialog open="open" id="eichberg">
-        <form method="dialog">
-            <button>x</button>
-        </form>
+    <dialog open="open" class="startsite" id="eichberg">
     </dialog>
 
-    <div id="intro1wrap">
-        <dialog open="open" class="speech-bubble" id="intro1">
-            <p class="speech">
+    <div id="intro1wrap" class="startsite">
+        <dialog open="open" class="speech-bubble startsite" id="intro1">
+            <p class="speech startsite">
                 Welcome to UYES!
                 Our round-based card game that probably sounds
                 familiar to most of you...
             </p>
             <form method="dialog">
-                <button  class="introduction">Next</button>
+                <button  class="introduction startsite">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro2wrap">
-        <dialog open="open" class="speech-bubble" id="intro2">
-            <p class="speech">
+    <div id="intro2wrap" class="startsite">
+        <dialog open="open" class="speech-bubble startsite" id="intro2">
+            <p class="speech startsite">
                 If you want, I can show you around and give you an Intro
                 to our application?
             </p>
             <form method="dialog">
-                <button  class="introduction">Yes</button>
-                <button  class="introduction" id="NO">No</button>
+                <button  class="introduction startsite">Yes</button>
+                <button  class="introduction startsite" id="NO">No</button>
             </form>
         </dialog>
     </div>
-    <div id="intro3wrap">
-        <dialog open="open" class="speech-bubble" id="intro3">
-            <p class="speech">
+    <div id="intro3wrap" class="startsite">
+        <dialog open="open" class="speech-bubble startsite" id="intro3">
+            <p class="speech startsite">
                 Nice! UYES is a card game based on UNO.
-                No worries I will explain the rules to you
-                when you start your first game.
+                No worries if You dont know it.
+                You can look the rules up later.
             </p>
             <form method="dialog">
-                <button  class="introduction">Next</button>
+                <button  class="introduction startsite">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro4wrap">
-        <dialog open="open" class="speech-bubble" id="intro4">
-            <p class="speech">
+    <div id="intro4wrap" class="startsite">
+        <dialog open="open" class="speech-bubble startsite" id="intro4">
+            <p class="speech startsite">
                 For your orientation: Curious about our team, our idea, and how UYES came to life?
                 Or interested in what’s next for us?
                 Click this button to learn more!
             </p>
             <form method="dialog">
-                <button  class="introduction">Next</button>
+                <button  class="introduction startsite">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro5wrap">
-        <dialog open="open" class="speech-bubble" id="intro5">
-            <p class="speech">
+    <div id="intro5wrap" class="startsite">
+        <dialog open="open" class="speech-bubble startsite" id="intro5">
+            <p class="speech startsite">
                 If you're unsure about a rule, need to adjust settings,
                 or just lost? This button is your way out.
                 It takes you to the rulebook, settings, or back to the home screen.
             </p>
             <form method="dialog">
-                <button  class="introduction">Next</button>
+                <button  class="introduction startsite">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro6wrap">
-        <dialog open="open" class="speech-bubble" id="intro6">
-            <p class="speech">
+    <div id="intro6wrap" class="startsite">
+        <dialog open="open" class="speech-bubble startsite" id="intro6">
+            <p class="speech startsite">
                 Perfect! Now you're familiar with the start page.
                 Click here to continue and start your first game!
             </p>
             <form method="dialog">
-                <button  class="introduction">Next</button>
+                <button  class="introduction startsite">Next</button>
             </form>
         </dialog>
     </div>
