Improved intro and added intro button
Added eichberg button to replay the intro and made intro logic Modular instead of hard coded

--- a/html/GameStart.html
+++ b/html/GameStart.html
@@ -14,7 +14,7 @@
     <dialog open="open" class="gamestart" id="eichberg">
     </dialog>
 
-    <div id="intro1wrap" class="gamestart">
+    <div id="intro1wrap" class="gamestart intro">
         <dialog open="open" class="speech-bubble gamestart" id="intro1">
             <p class="speech gamestart">
                 Hey! I see you made it!
@@ -26,7 +26,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro2wrap" class="gamestart">
+    <div id="intro2wrap" class="gamestart intro">
         <dialog open="open" class="speech-bubble gamestart" id="intro2">
             <p class="speech gamestart">
                 These are the settings you
@@ -37,7 +37,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro3wrap" class="gamestart">
+    <div id="intro3wrap" class="gamestart intro">
         <dialog open="open" class="speech-bubble gamestart" id="intro3">
             <p class="speech gamestart">
                 Here you can choose the amount of
@@ -48,7 +48,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro4wrap" class="gamestart">
+    <div id="intro4wrap" class="gamestart intro">
         <dialog open="open" class="speech-bubble gamestart" id="intro4">
             <p class="speech gamestart">
                 With this control you can
@@ -60,7 +60,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro5wrap" class="gamestart">
+    <div id="intro5wrap" class="gamestart intro">
         <dialog open="open" class="speech-bubble gamestart" id="intro5">
             <p class="speech gamestart">
                 And here you can choose which
@@ -72,7 +72,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro6wrap" class="gamestart">
+    <div id="intro6wrap" class="gamestart intro">
         <dialog open="open" class="speech-bubble gamestart" id="intro6">
             <p class="speech gamestart">
                 Nice! Of course this button will bring
@@ -83,7 +83,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro7wrap" class="gamestart">
+    <div id="intro7wrap" class="gamestart intro">
         <dialog open="open" class="speech-bubble gamestart" id="intro7">
             <p class="speech gamestart">
                 Hit this button to start the game!
@@ -94,7 +94,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro8wrap" class="gamestart">
+    <div id="intro8wrap" class="gamestart intro">
         <dialog open="open" class="speech-bubble gamestart" id="intro8">
             <p class="speech gamestart">
                 But remember: Wanna see rules, end the game,
@@ -106,7 +106,18 @@
             </form>
         </dialog>
     </div>
-    <div id="intro9wrap" class="gamestart">
+    <div id="intro85wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro85">
+            <p class="speech gamestart">
+                To replay this intro at any time
+                just click on me!
+            </p>
+            <form method="dialog">
+                <button  class="introduction gamestart">Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro9wrap" class="gamestart intro">
         <dialog open="open" class="speech-bubble gamestart" id="intro9">
             <p class="speech gamestart">
                 Have fun and enjoy the game!
@@ -195,5 +206,9 @@
         </button>
     </section>
 </div>
+
+<div id="eichberg2"></div>
+
+
 </body>
 </html>
