--- a/html/Startsite.html
+++ b/html/Startsite.html
@@ -8,13 +8,12 @@
 
 </head>
 <body id="startsite">
-
 <div id="milch-glas-layer">
 
     <dialog open="open" class="startsite" id="eichberg">
     </dialog>
 
-    <div id="intro1wrap" class="startsite">
+    <div id="intro1wrap" class="startsite intro">
         <dialog open="open" class="speech-bubble startsite" id="intro1">
             <p class="speech startsite">
                 Welcome to UYES!
@@ -26,7 +25,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro2wrap" class="startsite">
+    <div id="intro2wrap" class="startsite intro">
         <dialog open="open" class="speech-bubble startsite" id="intro2">
             <p class="speech startsite">
                 If you want, I can show you around and give you an Intro
@@ -38,7 +37,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro3wrap" class="startsite">
+    <div id="intro3wrap" class="startsite intro">
         <dialog open="open" class="speech-bubble startsite" id="intro3">
             <p class="speech startsite">
                 Nice! UYES is a card game based on UNO.
@@ -50,7 +49,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro4wrap" class="startsite">
+    <div id="intro4wrap" class="startsite intro">
         <dialog open="open" class="speech-bubble startsite" id="intro4">
             <p class="speech startsite">
                 For your orientation: Curious about our team, our idea, and how UYES came to life?
@@ -62,7 +61,7 @@
             </form>
         </dialog>
     </div>
-    <div id="intro5wrap" class="startsite">
+    <div id="intro5wrap" class="startsite intro">
         <dialog open="open" class="speech-bubble startsite" id="intro5">
             <p class="speech startsite">
                 If you're unsure about a rule, need to adjust settings,
@@ -74,11 +73,22 @@
             </form>
         </dialog>
     </div>
-    <div id="intro6wrap" class="startsite">
+    <div id="intro65wrap" class="startsite intro">
+        <dialog open="open" class="speech-bubble startsite" id="intro65">
+            <p class="speech startsite">
+                To replay this intro at any time
+                just click on me!
+            </p>
+            <form method="dialog">
+                <button  class="introduction startsite">Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro6wrap" class="startsite intro">
         <dialog open="open" class="speech-bubble startsite" id="intro6">
             <p class="speech startsite">
                 Perfect! Now you're familiar with the start page.
-                Click here to continue and start your first game!
+                Click here to continue and to start your first game!
             </p>
             <form method="dialog">
                 <button  class="introduction startsite">Next</button>
@@ -112,6 +122,9 @@
         </button>
     </section>
 </div>
+
+<div id="eichberg2"></div>
+
 
 </body>
 </html>
