small changes in design and code explanation

--- a/html/GameStart.html
+++ b/html/GameStart.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body id="gamestart">
-<button id="help-GameStart">HELP!</button>
+<button id="help-GameStart">HELP</button>
 
 <div id="milch-glas-layer">
 
@@ -199,10 +199,10 @@
 <div id="menu-GameStart">
     <section class="menu-Gamestart">
         <button id="back-Gamestart">
-            BACK!
+            BACK
         </button>
         <button id="continue-Gamestart">
-            CONTINUE!
+            CONTINUE
         </button>
     </section>
 </div>
