--- a/html/Startsite.html
+++ b/html/Startsite.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startsite</title>
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="icon" href="/images/logo.png" type="image.png">
+
 
 </head>
 <body id="startsite">
