Changed Button Text to "BACK!"

--- a/html/AboutPage.html
+++ b/html/AboutPage.html
@@ -37,7 +37,7 @@
     <section class="menu">
         
         <button id="back-to-main-menu">
-        GO BACK!
+        BACK!
         </button>
         
     </section>
