--- a/html/AboutPage.html
+++ b/html/AboutPage.html
@@ -5,6 +5,7 @@
     <title>About</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/AboutPage.css">
+     <link rel="icon" href="/images/logo.png" type="image.png">
 
 </head>
 <body id="about">
