changed stylesheet properly

--- a/html/HelpPage.html
+++ b/html/HelpPage.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>UYES Help Page</title>
-    <link rel="stylesheet" href="../styles/GeneralStyles.css">
-    <link rel="stylesheet" href="../styles/helpPage.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body class="help-page-body">
 
