--- a/html/HelpPage.html
+++ b/html/HelpPage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>UYES Help Page</title>
     <link rel="stylesheet" href="../styles/style.css">
+    <link rel="icon" href="/images/logo.png" type="image.png">
 </head>
 <body class="help-page-body">
 
