--- a/html/Gameplay2.html
+++ b/html/Gameplay2.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 </head>
 
-<body>
+<body id="gameplay2">
 <button id="help-GameStart">HELP!</button>
 
 <div id="header">
-  <section >
-    <h1 id="gameTitle">UYES!</h1>
-    <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
-  </section>
+    <section >
+        <h1 id="gameTitle">UYES!</h1>
+        <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
+    </section>
 </div>
 
 <div id="piles">
@@ -25,7 +25,7 @@
     </div>
     <div class="pile" id="discard-pile">
         <h2>Discard:</h2>
-        <span class="card big red"><span><span>3</span></span></span>
+        <span class="card big yellow"><span><span>3</span></span></span>
     </div>
 </div>
 <div id="player-avatars">
@@ -33,7 +33,7 @@
         <div class="avatar" id="player2">
             <div class="cardHands">
                 <div class="avatar-row">
-                    <h2 class="cardsleft">2x</h2>
+                    <h2 class="cardsleft">1x</h2>
                 </div>
                 <div class="avatar-row">
                     <span class="card small back"><span><span></span></span></span>
@@ -86,16 +86,16 @@
     <span class="card normal blue"><span><span>4</span></span></span>
     <span class="card normal green"><span><span>6</span></span></span>
     <span class="card normal blue"><span><span>4</span></span></span>
-<!--    <span class="card big green"><span><span>6</span></span></span>-->
-<!--    <span class="card big red"><span><span>3</span></span></span>-->
-<!--    <span class="card big blue"><span><span>4</span></span></span>-->
-<!--    <span class="card big green"><span><span>6</span></span></span>-->
-<!--    <span class="card big green"><span><span>6</span></span></span>-->
-<!--    <span class="card big blue"><span><span>4</span></span></span>-->
-<!--    <span class="card big red"><span><span>3</span></span></span>-->
-<!--    <span class="card big green"><span><span>6</span></span></span>-->
-<!--    <span class="card big blue"><span><span>4</span></span></span>-->
-<!--    <span class="card big green"><span><span>6</span></span></span>-->
+    <!--    <span class="card big green"><span><span>6</span></span></span>-->
+    <!--    <span class="card big red"><span><span>3</span></span></span>-->
+    <!--    <span class="card big blue"><span><span>4</span></span></span>-->
+    <!--    <span class="card big green"><span><span>6</span></span></span>-->
+    <!--    <span class="card big green"><span><span>6</span></span></span>-->
+    <!--    <span class="card big blue"><span><span>4</span></span></span>-->
+    <!--    <span class="card big red"><span><span>3</span></span></span>-->
+    <!--    <span class="card big green"><span><span>6</span></span></span>-->
+    <!--    <span class="card big blue"><span><span>4</span></span></span>-->
+    <!--    <span class="card big green"><span><span>6</span></span></span>-->
 
 
 
@@ -103,7 +103,7 @@
 <div id="yourTurn">
     Your turn in:
     <div id="roundCountTurn">
-        2
+        1
     </div>
 </div>
 
