Added dropdown for Language Selection

--- a/html/HelpPage.html
+++ b/html/HelpPage.html
@@ -44,6 +44,21 @@
                 <input type="range" min="-3" max="3" step="1.0" value="0">
                 <button class="help-increase-volume">+</button>
             </div>
+            <br>
+            <div id="help-language">
+                <label class="help-language">Language:</label>
+                <select name="language" id="help-language-dropdown">>
+
+
+                    <option value="English">English</option>
+
+
+                    <option value="German">German</option>
+
+                </select>
+            </div>
+
+
         </div>
     </details>
 
