--- a/html/Gameplay2.html
+++ b/html/Gameplay2.html
@@ -10,6 +10,7 @@
 
 <body id="gameplay2">
 <button id="help-GameStart">HELP!</button>
+<button id="UYES">UYES</button>
 
 <div id="header">
     <section >
