--- a/html/Gameplay4.html
+++ b/html/Gameplay4.html
@@ -10,6 +10,7 @@
 
 <body id="gameplay4">
 <button id="help-GameStart">HELP!</button>
+<button id="UYES">UYES</button>
 
 <div id="milchglas2"></div>
 <div id="winner"></div>
