--- a/html/Gameplay.html
+++ b/html/Gameplay.html
@@ -10,7 +10,7 @@
 
 <body>
 <button id="help-GameStart">HELP!</button>
-
+<button id="UYES">UYES</button>
 <div id="header">
   <section >
     <h1 id="gameTitle">UYES!</h1>
