entkommentiert gamestart intro

--- a/html/GameStart.html
+++ b/html/GameStart.html
@@ -11,125 +11,125 @@
 <body id="gamestart">
 <button id="help-GameStart">HELP</button>
 
-<!--<div id="milch-glas-layer">-->
+<div id="milch-glas-layer">
 
-<!--    <dialog open="open" class="gamestart" id="eichberg">-->
-<!--    </dialog>-->
+    <dialog open="open" class="gamestart" id="eichberg">
+    </dialog>
 
-<!--    <div id="intro1wrap" class="gamestart intro">-->
-<!--        <dialog open="open" class="speech-bubble gamestart" id="intro1">-->
-<!--            <p class="speech gamestart">-->
-<!--                Hey! I see you made it!-->
-<!--                Let me just introduce you to-->
-<!--                what you can do here!-->
-<!--            </p>-->
-<!--            <form method="dialog">-->
-<!--                <button  class=" gamestart introduction">Next</button>-->
-<!--            </form>-->
-<!--        </dialog>-->
-<!--    </div>-->
-<!--    <div id="intro2wrap" class="gamestart intro">-->
-<!--        <dialog open="open" class="speech-bubble gamestart" id="intro2">-->
-<!--            <p class="speech gamestart">-->
-<!--                These are the settings you-->
-<!--                can choose for your game!-->
-<!--            </p>-->
-<!--            <form method="dialog">-->
-<!--                <button  class=" gamestart introduction">Next</button>-->
-<!--            </form>-->
-<!--        </dialog>-->
-<!--    </div>-->
-<!--    <div id="intro3wrap" class="gamestart intro">-->
-<!--        <dialog open="open" class="speech-bubble gamestart" id="intro3">-->
-<!--            <p class="speech gamestart">-->
-<!--                Here you can choose the amount of-->
-<!--                players you want to play.-->
-<!--            </p>-->
-<!--            <form method="dialog">-->
-<!--                <button  class="introduction gamestart">Next</button>-->
-<!--            </form>-->
-<!--        </dialog>-->
-<!--    </div>-->
-<!--    <div id="intro4wrap" class="gamestart intro">-->
-<!--        <dialog open="open" class="speech-bubble gamestart" id="intro4">-->
-<!--            <p class="speech gamestart">-->
-<!--                With this control you can-->
-<!--                decide with how many cards-->
-<!--                the game will start.-->
-<!--            </p>-->
-<!--            <form method="dialog">-->
-<!--                <button  class="introduction gamestart" >Next</button>-->
-<!--            </form>-->
-<!--        </dialog>-->
-<!--    </div>-->
-<!--    <div id="intro5wrap" class="gamestart intro">-->
-<!--        <dialog open="open" class="speech-bubble gamestart" id="intro5">-->
-<!--            <p class="speech gamestart">-->
-<!--                And here you can choose which-->
-<!--                special cards will be active in-->
-<!--                your game.-->
-<!--            </p>-->
-<!--            <form method="dialog">-->
-<!--                <button  class="introduction gamestart">Next</button>-->
-<!--            </form>-->
-<!--        </dialog>-->
-<!--    </div>-->
-<!--    <div id="intro6wrap" class="gamestart intro">-->
-<!--        <dialog open="open" class="speech-bubble gamestart" id="intro6">-->
-<!--            <p class="speech gamestart">-->
-<!--                Nice! Of course this button will bring-->
-<!--                you back to the homescreen.-->
-<!--            </p>-->
-<!--            <form method="dialog">-->
-<!--                <button  class="introduction gamestart">Next</button>-->
-<!--            </form>-->
-<!--        </dialog>-->
-<!--    </div>-->
-<!--    <div id="intro7wrap" class="gamestart intro">-->
-<!--        <dialog open="open" class="speech-bubble gamestart" id="intro7">-->
-<!--            <p class="speech gamestart">-->
-<!--                Hit this button to start the game!-->
-<!--                – I’m sure you’ll figure things out quickly from there!-->
-<!--            </p>-->
-<!--            <form method="dialog">-->
-<!--                <button  class="introduction gamestart">Next</button>-->
-<!--            </form>-->
-<!--        </dialog>-->
-<!--    </div>-->
-<!--    <div id="intro8wrap" class="gamestart intro">-->
-<!--        <dialog open="open" class="speech-bubble gamestart" id="intro8">-->
-<!--            <p class="speech gamestart">-->
-<!--                But remember: Wanna see rules, end the game,-->
-<!--                change settings?-->
-<!--                Just look for <i>HELP!</i>-->
-<!--            </p>-->
-<!--            <form method="dialog">-->
-<!--                <button  class="introduction gamestart">Next</button>-->
-<!--            </form>-->
-<!--        </dialog>-->
-<!--    </div>-->
-<!--    <div id="intro85wrap" class="gamestart intro">-->
-<!--        <dialog open="open" class="speech-bubble gamestart" id="intro85">-->
-<!--            <p class="speech gamestart">-->
-<!--                To replay this intro at any time-->
-<!--                just click on me!-->
-<!--            </p>-->
-<!--            <form method="dialog">-->
-<!--                <button  class="introduction gamestart">Next</button>-->
-<!--            </form>-->
-<!--        </dialog>-->
-<!--    </div>-->
-<!--    <div id="intro9wrap" class="gamestart intro">-->
-<!--        <dialog open="open" class="speech-bubble gamestart" id="intro9">-->
-<!--            <p class="speech gamestart">-->
-<!--                Have fun and enjoy the game!-->
-<!--            </p>-->
-<!--            <form method="dialog">-->
-<!--                <button  class="introduction gamestart">Next</button>-->
-<!--            </form>-->
-<!--        </dialog>-->
-<!--    </div>-->
-<!--</div>-->
+    <div id="intro1wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro1">
+            <p class="speech gamestart">
+                Hey! I see you made it!
+                Let me just introduce you to
+                what you can do here!
+            </p>
+            <form method="dialog">
+                <button  class=" gamestart introduction">Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro2wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro2">
+            <p class="speech gamestart">
+                These are the settings you
+                can choose for your game!
+            </p>
+            <form method="dialog">
+                <button  class=" gamestart introduction">Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro3wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro3">
+            <p class="speech gamestart">
+                Here you can choose the amount of
+                players you want to play.
+            </p>
+            <form method="dialog">
+                <button  class="introduction gamestart">Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro4wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro4">
+            <p class="speech gamestart">
+                With this control you can
+                decide with how many cards
+                the game will start.
+            </p>
+            <form method="dialog">
+                <button  class="introduction gamestart" >Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro5wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro5">
+            <p class="speech gamestart">
+                And here you can choose which
+                special cards will be active in
+                your game.
+            </p>
+            <form method="dialog">
+                <button  class="introduction gamestart">Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro6wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro6">
+            <p class="speech gamestart">
+                Nice! Of course this button will bring
+                you back to the homescreen.
+            </p>
+            <form method="dialog">
+                <button  class="introduction gamestart">Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro7wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro7">
+            <p class="speech gamestart">
+                Hit this button to start the game!
+                – I’m sure you’ll figure things out quickly from there!
+            </p>
+            <form method="dialog">
+                <button  class="introduction gamestart">Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro8wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro8">
+            <p class="speech gamestart">
+                But remember: Wanna see rules, end the game,
+                change settings?
+                Just look for <i>HELP!</i>
+            </p>
+            <form method="dialog">
+                <button  class="introduction gamestart">Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro85wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro85">
+            <p class="speech gamestart">
+                To replay this intro at any time
+                just click on me!
+            </p>
+            <form method="dialog">
+                <button  class="introduction gamestart">Next</button>
+            </form>
+        </dialog>
+    </div>
+    <div id="intro9wrap" class="gamestart intro">
+        <dialog open="open" class="speech-bubble gamestart" id="intro9">
+            <p class="speech gamestart">
+                Have fun and enjoy the game!
+            </p>
+            <form method="dialog">
+                <button  class="introduction gamestart">Next</button>
+            </form>
+        </dialog>
+    </div>
+</div>
 
 <div id="header">
     <section >
