--- a/html/AboutPage.html
+++ b/html/AboutPage.html
@@ -5,51 +5,54 @@
     <title>About</title>
     <link rel="stylesheet" href="../styles/style.css">
 
-     <link rel="icon" href="/images/logo.png" type="image.png">
+    <link rel="icon" href="/images/logo.png" type="image.png">
 
 </head>
 <body id="about">
 
 <div id="header">
-    <section >
+    <section>
         <h1 id="gameTitle">UYES!</h1>
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
 
 <div id="main">
-        <div id="aboutText">
-            <h2 id="aboutText-header1">About the Game</h2>
-            <p>
-                UYES! is a fun and engaging card game designed to bring people together. The game is easy to learn and can be played by anyone, regardless of age or experience. The objective is to collect as many points as possible by playing cards strategically.
-            </p>
-            <p>
-                The game features colorful graphics and an intuitive interface, making it accessible for both casual and serious gamers. Whether you're playing with friends or family, UYES! promises hours of entertainment and excitement.
-            </p>
-            <p>
-                The game is designed to be played in a relaxed and friendly atmosphere, encouraging social interaction and teamwork. With its simple rules and fast-paced gameplay, UYES! is perfect for parties, gatherings, or just a fun night in.
-            </p>
+    <div id="aboutText">
+        <h2 id="aboutText-header1">About the Game</h2>
+        <p>
+            UYES! is a fun and engaging card game designed to bring people together. The game is easy to learn and can
+            be played by anyone, regardless of age or experience. The objective is to collect as many points as possible
+            by playing cards strategically.
+        </p>
+        <p>
+            The game features colorful graphics and an intuitive interface, making it accessible for both casual and
+            serious gamers. Whether you're playing with friends or family, UYES! promises hours of entertainment and
+            excitement.
+        </p>
+        <p>
+            The game is designed to be played in a relaxed and friendly atmosphere, encouraging social interaction and
+            teamwork. With its simple rules and fast-paced gameplay, UYES! is perfect for parties, gatherings, or just a
+            fun night in.
+        </p>
 
-            <h2>About Us</h2>
-            <p>
-                We are a Group of students learning web developoment through creating this game. Our goal is to create a fun and engaging experience for players while also expanding our skills!
-            </p>
-        </div>
+        <h2>About Us</h2>
+        <p>
+            We are a Group of students learning web developoment through creating this game. Our goal is to create a fun
+            and engaging experience for players while also expanding our skills!
+        </p>
+    </div>
 </div>
 
 <div id="menu">
     <section class="menu">
-        
+
         <button id="back-to-main-menu">
-        BACK!
+            BACK!
         </button>
-        
+
     </section>
 </div>
-
-
-
-
 
 
 </body>
