--- a/html/createGame.html
+++ b/html/createGame.html
@@ -43,7 +43,7 @@
         <dialog open="open" class="speech-bubble gamestart" id="intro3">
             <p class="speech gamestart">
                 Here you can choose the amount of
-                players you want to play.
+                players you want to play with.
             </p>
             <form method="dialog">
                 <button  class="introduction gamestart">Next</button>
@@ -77,8 +77,8 @@
     <div id="intro6wrap" class="gamestart intro">
         <dialog open="open" class="speech-bubble gamestart" id="intro6">
             <p class="speech gamestart">
-                Nice! Of course this button will bring
-                you back to the homescreen.
+                Nice! Of course this button will again bring
+                you back to the previous page.
             </p>
             <form method="dialog">
                 <button  class="introduction gamestart">Next</button>
