--- a/html/chooseLobby.html
+++ b/html/chooseLobby.html
@@ -10,7 +10,8 @@
 
 </head>
 <body id="chooseLobby">
-<button id="help-chooseLobby">HELP</button>
+<button id="help-chooseLobby">BACK</button>
+<div id="eichberg2"></div>
 
 <div id="milch-glas-layer">
 
@@ -75,8 +76,8 @@
 <div id="gameOnMain">
     <h2>Game On!</h2>
     <div id="lobbyButtons">
-        <button id="create" class="lobby">Create</button>
-        <button id="join" class="lobby">Join</button>
+        <button id="create" class="lobby">CREATE</button>
+        <button id="join" class="lobby">JOIN</button>
     </div>
 </div>
 
