changed all references on gamestart to createGame

--- a/html/Gameplay.html
+++ b/html/Gameplay.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<button id="help-GameStart">HELP!</button>
+<button id="help-createGame">HELP!</button>
 <button id="UYES">UYES</button>
 <div id="header">
     <section>
