--- a/html/Gameplay4.html
+++ b/html/Gameplay4.html
@@ -9,7 +9,7 @@
 </head>
 
 <body id="gameplay4">
-<button id="help-GameStart">HELP!</button>
+<button id="help-createGame">HELP!</button>
 <button id="UYES">UYES</button>
 
 <div id="milchglas2"></div>
