--- a/html/createGame.html
+++ b/html/createGame.html
@@ -3,129 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GameStart</title>
+    <title>createGame</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
 </head>
-<body id="gamestart">
-<button id="help-GameStart">HELP</button>
+<body id="createGame">
+<button id="help-createGame">BACK</button>
 
 <div id="milch-glas-layer">
 
-    <dialog open="open" class="gamestart" id="eichberg">
+    <dialog open="open" class="createGame" id="eichberg">
     </dialog>
 
-    <div id="intro1wrap" class="gamestart intro">
-        <dialog open="open" class="speech-bubble gamestart" id="intro1">
-            <p class="speech gamestart">
+    <div id="intro1wrap" class="createGame intro">
+        <dialog open="open" class="speech-bubble createGame" id="intro1">
+            <p class="speech createGame">
                 Hey! I see you made it!
                 Let me just introduce you to
                 what you can do here!
             </p>
             <form method="dialog">
-                <button class=" gamestart introduction">Next</button>
+                <button class=" createGame introduction">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro2wrap" class="gamestart intro">
-        <dialog open="open" class="speech-bubble gamestart" id="intro2">
-            <p class="speech gamestart">
+    <div id="intro2wrap" class="createGame intro">
+        <dialog open="open" class="speech-bubble createGame" id="intro2">
+            <p class="speech createGame">
                 These are the settings you
                 can choose for your game!
             </p>
             <form method="dialog">
-                <button class=" gamestart introduction">Next</button>
+                <button class=" createGame introduction">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro3wrap" class="gamestart intro">
-        <dialog open="open" class="speech-bubble gamestart" id="intro3">
-            <p class="speech gamestart">
+    <div id="intro3wrap" class="createGame intro">
+        <dialog open="open" class="speech-bubble createGame" id="intro3">
+            <p class="speech createGame">
                 Here you can choose the amount of
                 players you want to play with.
             </p>
             <form method="dialog">
-                <button class="introduction gamestart">Next</button>
+                <button class="introduction createGame">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro4wrap" class="gamestart intro">
-        <dialog open="open" class="speech-bubble gamestart" id="intro4">
-            <p class="speech gamestart">
+    <div id="intro4wrap" class="createGame intro">
+        <dialog open="open" class="speech-bubble createGame" id="intro4">
+            <p class="speech createGame">
                 With this control you can
                 decide with how many cards
                 the game will start.
             </p>
             <form method="dialog">
-                <button class="introduction gamestart">Next</button>
+                <button class="introduction createGame">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro5wrap" class="gamestart intro">
-        <dialog open="open" class="speech-bubble gamestart" id="intro5">
-            <p class="speech gamestart">
+    <div id="intro5wrap" class="createGame intro">
+        <dialog open="open" class="speech-bubble createGame" id="intro5">
+            <p class="speech createGame">
                 And here you can choose which
                 special cards will be active in
                 your game.
             </p>
             <form method="dialog">
-                <button class="introduction gamestart">Next</button>
+                <button class="introduction createGame">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro6wrap" class="gamestart intro">
-        <dialog open="open" class="speech-bubble gamestart" id="intro6">
-            <p class="speech gamestart">
+    <div id="intro6wrap" class="createGame intro">
+        <dialog open="open" class="speech-bubble createGame" id="intro6">
+            <p class="speech createGame">
                 Nice! Of course this button will again bring
                 you back to the previous page.
             </p>
             <form method="dialog">
-                <button class="introduction gamestart">Next</button>
+                <button class="introduction createGame">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro7wrap" class="gamestart intro">
-        <dialog open="open" class="speech-bubble gamestart" id="intro7">
-            <p class="speech gamestart">
+    <div id="intro7wrap" class="c intro">
+        <dialog open="open" class="speech-bubble createGame" id="intro7">
+            <p class="speech createGame">
                 Hit this button to start the game!
                 – I’m sure you’ll figure things out quickly from there!
             </p>
             <form method="dialog">
-                <button class="introduction gamestart">Next</button>
+                <button class="introduction createGame">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro8wrap" class="gamestart intro">
-        <dialog open="open" class="speech-bubble gamestart" id="intro8">
-            <p class="speech gamestart">
+    <div id="intro8wrap" class="createGame intro">
+        <dialog open="open" class="speech-bubble createGame" id="intro8">
+            <p class="speech createGame">
                 But remember: Wanna see rules, end the game,
                 change settings?
                 Just look for <i>HELP!</i>
             </p>
             <form method="dialog">
-                <button class="introduction gamestart">Next</button>
+                <button class="introduction createGame">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro85wrap" class="gamestart intro">
-        <dialog open="open" class="speech-bubble gamestart" id="intro85">
-            <p class="speech gamestart">
+    <div id="intro85wrap" class="createGame intro">
+        <dialog open="open" class="speech-bubble createGame" id="intro85">
+            <p class="speech createGame">
                 To replay this intro at any time
                 just click on me!
             </p>
             <form method="dialog">
-                <button class="introduction gamestart">Next</button>
+                <button class="introduction createGame">Next</button>
             </form>
         </dialog>
     </div>
-    <div id="intro9wrap" class="gamestart intro">
-        <dialog open="open" class="speech-bubble gamestart" id="intro9">
-            <p class="speech gamestart">
+    <div id="intro9wrap" class="createGame intro">
+        <dialog open="open" class="speech-bubble createGame" id="intro9">
+            <p class="speech createGame">
                 Have fun and enjoy the game!
             </p>
             <form method="dialog">
-                <button class="introduction gamestart">Next</button>
+                <button class="introduction createGame">Next</button>
             </form>
         </dialog>
     </div>
@@ -137,7 +137,7 @@
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
-<div id="mainwrapper">
+<div id="mainWrapper">
     <h2>Settings</h2>
     <div id="start-settings">
         <div id="starting-players">
@@ -197,12 +197,12 @@
         </div>
     </div>
 </div>
-<div id="menu-GameStart">
-    <section class="menu-Gamestart">
-        <button id="back-Gamestart">
+<div id="menu-createGame">
+    <section class="menu-createGame">
+        <button id="back-createGame">
             BACK
         </button>
-        <button id="continue-Gamestart">
+        <button id="continue-createGame">
             CONTINUE
         </button>
     </section>
