--- a/html/AboutPage.html
+++ b/html/AboutPage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>About</title>
     <link rel="stylesheet" href="../styles/style.css">
-
-     <link rel="icon" href="/images/logo.png" type="image.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/logo.png" type="image.png">
 
 </head>
 <body id="about">
