--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -7,9 +7,15 @@
     <link rel="icon" href="/images/logo.png" type="image.png">
 </head>
 <body id="joinLobby">
-
+<div id="header">
+    <section>
+        <h1 id="gameTitle">UYES!</h1>
+        <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
+    </section>
+</div>
 <button id="help-chooseLobby">BACK</button>
-<div id="eichberg2"></div>
+<a id="eichberg2" href="chooseLobby.html">
+</a>
 
 <main>
     <form action="action_page.php" method="post">
