made startsite buttons functional
changed them into a tags to link other sites

--- a/html/startSite.html
+++ b/html/startSite.html
@@ -113,19 +113,13 @@
 </div>
 <div id="menu">
     <section class="menu">
-        <button id="about">
-            ABOUT
-        </button>
-        <button id="start" >
-            START
-        </button>
-        <button id="help">
-            HELP
-        </button>
+        <a href="./aboutPage.html" class="button" role="button" id="about" >ABOUT</a>
+        <a href="./chooseLobby.html" class="button" role="button" id="start" >START</a>
+        <a href="./helpPage.html" class="button" role="button" id="help" >HELP</a>
     </section>
 </div>
 
-<div id="eichberg2"></div>
+<a href="./startSite.html" class="button" role="button" id="eichberg2"></a>
 
 
 </body>
