made about page button functional
changed into a tag to link site

--- a/html/aboutPage.html
+++ b/html/aboutPage.html
@@ -39,10 +39,8 @@
 
 <div id="menu">
     <section class="menu">
-        
-        <button id="back-to-main-menu">
-        BACK!
-        </button>
+        <a href="./startSite.html" class="button" role="button" id="back-to-main-menu" >BACK</a>
+
         
     </section>
 </div>
