made buttons functional on chooseLobby and on helpPage

--- a/html/helpPage.html
+++ b/html/helpPage.html
@@ -82,7 +82,8 @@
     </section>
 </div>
 
-<button class="help-go-back-button">Go back!</button>
+<a href="./startSite.html" class="button backButtonTop" role="button">BACK</a>
+
 
 </body>
 </html>
