--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -13,7 +13,7 @@
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
-<button id="help-chooseLobby">BACK</button>
+<a href="./chooseLobby.html" class="button backButtonTop" role="button">BACK</a>
 <a id="eichberg2" href="chooseLobby.html">
 </a>
 
