--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -18,7 +18,7 @@
 </a>
 
 <main>
-    <form action="action_page.php" method="post">
+    <form  method="post">
         <input id="gameCodeInput" type="text" placeholder="Enter game-code" name="game-code" required>
         <button class="joinForm" id="joinGame" type="submit">JOIN</button>
         <button class="joinForm" id="cancelJoin" type="button">CANCEL</button>
