--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -19,6 +19,7 @@
 
 <main>
     <form  method="post">
+        <label for="gameCodeInput"></label>
         <input id="gameCodeInput" type="text" placeholder="Enter game-code" name="game-code" required>
         <button class="joinForm" id="joinGame" type="submit">JOIN</button>
         <button class="joinForm" id="cancelJoin" type="button">CANCEL</button>
