--- a/html/createGame.html
+++ b/html/createGame.html
@@ -9,7 +9,7 @@
 
 </head>
 <body id="createGame">
-<button id="help-createGame">BACK</button>
+<a href="./chooseLobby.html" class="button backButtonTop" role="button">BACK</a>
 
 <div id="milch-glas-layer">
 
@@ -198,17 +198,13 @@
     </div>
 </div>
 <div id="menu-createGame">
-    <section class="menu-createGame">
-        <button id="back-createGame">
-            BACK
-        </button>
-        <button id="continue-createGame">
-            CONTINUE
-        </button>
-    </section>
-</div>
+        <a href="./lobby.html" class="button" role="button" id="continue-createGame">CONTINUE</a>
 
-<div id="eichberg2"></div>
+
+</div>
+<a href="./createGame.html" class="button" role="button" id="eichberg2"></a>
+
+
 
 
 </body>
