added sites withour intro
so it doesnt repeat over and over again

--- a/html/aboutPage.html
+++ b/html/aboutPage.html
@@ -39,9 +39,7 @@
 
 <div id="menu">
     <section class="menu">
-        <a href="./startSite.html" class="button" role="button" id="back-to-main-menu" >BACK</a>
-
-        
+        <a href="./startSiteNoIntro.html" class="button" role="button" id="back-to-main-menu" >BACK</a>
     </section>
 </div>
 
