--- a/html/helpPage.html
+++ b/html/helpPage.html
@@ -82,7 +82,7 @@
     </section>
 </div>
 
-<a href="./startSite.html" class="button backButtonTop" role="button">BACK</a>
+<a href="./startSiteNoIntro.html" class="button backButtonTop" role="button">BACK</a>
 
 
 </body>
