--- a/html/startSite.html
+++ b/html/startSite.html
@@ -34,8 +34,10 @@
                 to our application?
             </p>
             <form method="dialog">
+
                 <button class="introduction startsite">Yes</button>
-                <button class="introduction startsite" id="NO">No</button>
+                <a href="./startSiteNoIntro.html" class="button introduction startsite" role="button" id="NO" >No</a>
+<!--                <button class="introduction startsite" id="NO">No</button>-->
             </form>
         </dialog>
     </div>
