reapaired help button on gameplay

--- a/html/gameplay3.html
+++ b/html/gameplay3.html
@@ -9,7 +9,8 @@
 </head>
 
 <body id="gameplay3">
-<button id="help-createGame">HELP!</button>
+<button  class="button backButtonTop" >HELP</button>
+
 <button id="UYES">UYES</button>
 
 <div id="header">
