--- a/html/gameplay4.html
+++ b/html/gameplay4.html
@@ -9,7 +9,8 @@
 </head>
 
 <body id="gameplay4">
-<button id="help-createGame">HELP!</button>
+<button  class="button backButtonTop" >HELP</button>
+
 <button id="UYES">UYES</button>
 
 <div id="milchglas2"></div>
