started with lobby site

--- a/html/lobby.html
+++ b/html/lobby.html
@@ -15,7 +15,12 @@
     </section>
 </div>
 
-<button id="help-chooseLobby">HELP</button>
+<button  class="button backButtonTop" >HELP</button>
+
+<div id="player-lobby-container">
+
+</div>
+
 
 </body>
 </html>
