finished Lbby page for lobby creator

--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -17,7 +17,7 @@
 <a id="eichberg2" href="chooseLobby.html">
 </a>
 
-<main>
+<main class="joinLobby">
     <form  method="post">
         <label for="gameCodeInput"></label>
         <input id="gameCodeInput" type="text" placeholder="Enter game-code" name="game-code" required>
