created Joiner Lobby page

--- a/html/createGameNoIntro.html
+++ b/html/createGameNoIntro.html
@@ -80,7 +80,7 @@
     </div>
 </div>
 <div id="menu-createGame">
-        <a href="./lobby.html" class="button" role="button" id="continue-createGame">CONTINUE</a>
+        <a href="lobbyHost.html" class="button" role="button" id="continue-createGame">CONTINUE</a>
 
 
 </div>
